working on dbaccess

--- a/ch3/package.json
+++ b/ch3/package.json
@@ -76,6 +76,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "fetch": "^1.1.0",
+    "mariasql": "^0.2.6",
     "moment": "^2.24.0"
   },
   "devDependencies": {
